Bug#47039 : Signals from failed API node received after API_FAILREQ